# SewEasy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  ReadMe.md  chatgarment_modal.py  docker-compose.yml  gui.py  modal_drape.py  pattern_data_sim.py  pattern_fitter.py  pattern_sampler.py  setup.cfg  test_garment_sim.py  test_seweasy.py
assets/Sim_props/: gui_sim_props.yaml
assets/bodies/: body_params.py  mean_all_display.glb
assets/design_params/: default.yaml  dress-shirt.yaml  element-top.yaml
assets/garment_programs/: bands.py  base_classes.py  bodice.py  circle_skirt.py  closures.py  collars.py  dress_shirt.py  element_top.py  godet.py  meta_garment.py  pants.py  shapes.py  skirt_paneled.py  sleeves.py  stats_utils.py  tee.py
docs/: Installation.md  RAILWAY.md  Running_Maya_Qualoth.md  Running_data_generation.md  Running_seweasy.md
gui/: callbacks.py  error_pages.py  gui_pattern.py  maya_garmentviewer.py  theme.py
post_processing_scripts/: align_bodies.py  gather_renders.py
seweasy/: __init__.py
seweasy/garmentcode/: base.py  component.py  connector.py  edge.py  edge_factory.py  interface.py  operators.py  panel.py  params.py
seweasy/mayaqltools/: __init__.py  garmentUI.py  mayascene.py  scan_imitation.py  simulation.py
seweasy/meshgen/: boxmeshgen.py  datasim_utils.py  garment.py  sim_config.py  simulation.py
seweasy/pattern/: buttons.py  (+5 more)
webapp/: __init__.py  account_page.py  auth.py  body_display.py  config.py  db.py  designs.py  gui_widgets.py  measurement_guide.py  models.py  profiles.py  sharing.py
(+3 files in other folders)
