[metadata]
name = seweasy
version = 2.0.2
author = Maria Korosteleva
author_email = maria.korosteleva.public@gmail.com
maintainer = Thomas Hayama
maintainer_email = thomashayama@gmail.com
description = A modular programming framework for designing parametric sewing patterns (fork of pygarment/GarmentCode)
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = garment-programming, garment-modeling, sewing-patterns
url = https://github.com/thomashayama/SewEasy
project_urls =
    Bug_Tracker = https://github.com/thomashayama/SewEasy/issues
    repository = https://github.com/thomashayama/SewEasy
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
[options]
package_dir=
    =seweasy
packages=find:
python_requires = >=3.6
install_requires = 
    pyyaml>=6.0
    numpy<2
    scipy
    svgwrite
    svgpathtools
    psutil
    matplotlib
    CairoSVG
    nicegui<3
    trimesh
    libigl
    pyrender
    cgal

[options.packages.find]
where=seweasy